[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
frozone = "comibat.__main__:cli"

[project]
name = "comibat"
version = "0.1.0"
authors = [
  { name="Adil Atalay Hamamcioglu", email="38231748+recoskyler@users.noreply.github.com" },
]
description = "A tool to add a title page to CBZ comic book archives, and optionally convert them to EPUB"
readme = "README.md"
requires-python = ">=3.5"
keywords = [
    "comic book",
    "comic",
    "cbz",
    "epub",
    "manga",
    "title page",
    "cover",
    "cover image",
    "image",
    "fix"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Environment :: Console",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Topic :: Utilities",
    "Development Status :: 4 - Beta",
]
dependencies = [
    "setuptools",
    "Click",
]

[project.urls]
Homepage = "https://github.com/recoskyler/comibat"
Issues = "https://github.com/recoskyler/comibat/issues"
